--- a/SumOfTwoNumbers_addTodo/block.config.json
+++ b/SumOfTwoNumbers_addTodo/block.config.json
@@ -1,8 +1,8 @@
 {
   "type": "function",
   "source": {
-    "https": "",
-    "ssh": "",
+    "https": "https://github.com/thumbimurali/SumOfTwoNumbers.git",
+    "ssh": "git@github.com:thumbimurali/SumOfTwoNumbers.git",
     "branch": "block_SumOfTwoNumbers_addTodo"
   },
   "language": "nodejs",
