--- a/SumOfTwoNumbers_todoContainer/block.config.json
+++ b/SumOfTwoNumbers_todoContainer/block.config.json
@@ -2,8 +2,8 @@
   "name": "SumOfTwoNumbers_todoContainer",
   "type": "ui-container",
   "source": {
-    "https": "",
-    "ssh": "",
+    "https": "https://github.com/thumbimurali/SumOfTwoNumbers.git",
+    "ssh": "git@github.com:thumbimurali/SumOfTwoNumbers.git",
     "branch": "block_SumOfTwoNumbers_todoContainer"
   },
   "language": "js",
