--- a/SumOfTwoNumbers_todoInput/block.config.json
+++ b/SumOfTwoNumbers_todoInput/block.config.json
@@ -2,8 +2,8 @@
   "name": "SumOfTwoNumbers_todoInput",
   "type": "ui-elements",
   "source": {
-    "https": "",
-    "ssh": "",
+    "https": "https://github.com/thumbimurali/SumOfTwoNumbers.git",
+    "ssh": "git@github.com:thumbimurali/SumOfTwoNumbers.git",
     "branch": "block_SumOfTwoNumbers_todoInput"
   },
   "language": "js",
