--- a/sum/block.config.json
+++ b/sum/block.config.json
@@ -3,8 +3,8 @@
   "name": "sum",
   "type": "function",
   "source": {
-    "https": null,
-    "ssh": null,
+    "https": "https://github.com/thumbimurali/SumOfTwoNumbers.git",
+    "ssh": "git@github.com:thumbimurali/SumOfTwoNumbers.git",
     "branch": "block_sum"
   },
   "parentBlockIDs": [
